Revision history for Perl extension Data-MethodProxy.

{{$NEXT}}

0.04 2019-04-01T05:34:38Z

 - Minor documentation cleanups.
 - Require perl 5.8.1.
 - Simplify VERSION declarations.

0.03 2019-02-14T17:30:56Z

 - Rename distribution from Config-MethodProxy to Data-MethodProxy.
 - Created Data::MethodProxy, an OO version of Config::MethodProxy.
 - Made Config::MethodProxy a tiny shim over Data::MethodProxy.
 - Better synopsys and examples.
 - Test for circular reference detection... and fixed it.
 - Reduce dependencies a bit.
 - Migrate build tooling from Dist::Zilla to Minilla.

0.02 2016-11-09

 - Switch from Test::Stream to Test2::Bundle::Extended.
 - Support $proxy as an alternative to &proxy so that it isn't parsed
   as a YAML anchor.
 - Add extra validation for things like method proxies with undefined
   package and method names, which means better error messages closer
   to the caller.

0.01 2015-12-29

 - First release.
